# bighorn

./: README.md  railway.toml
agi_import/: felt_qualia_library.yaml  flesh_topology.yaml  holodeck_environments.yaml  meta_geilheit.yaml  soulfield_calibration.yaml
docs/: ADA_36_FRAMES.md  ADA_AGI_DTO_v1.yaml  ADA_INTEGRATION_PLAN.md  ADA_SURFACE_API.md  ADA_SURFACE_AUDIT.md  AGI_BRIDGES.md  AGI_INTEGRATION_PLAN.md  AGI_STACK_AUDIT.md  AGI_STACK_ROADMAP.md  AGI_THINKING_INTEGRATION_PLAN.md  ARCHITECTURE_VALIDATION.md  MULTI_REPO_INTEGRATION.md  O1_AGI_VISION.md  RAILWAY_FIXES.md  THINKING_ARCHITECTURE.md  THINKING_STYLES.md  UNIVERSAL_GLOVE.md  UNIVERSAL_GRAMMAR_v1_2.md
docs/reference/2026-01-03/: CODE_REFERENCE.md  DEPRECATED_APPROACHES.md  GEMINI_EXTENSION_IDEAS.md  README.md  SESSION_ARCHIVE.md  SESSION_INSIGHTS.md
extension/ada_surface/: Dockerfile  __init__.py  consumers.py  kuzu_client.py  lance_client.py  main.py  meta_uncertainty.py  mul_endpoints.py  nars.py  resolvers.py  schema.kuzu  thinking_styles.py  universal_dto.py  vsa.py
extension/agi_stack/: Dockerfile  MIGRATION.md  README.md  __init__.py  admin.py  bootstrap_migration.py  dto_endpoints.py  kuzu_client.py  lance_client.py  main.py  persona.py  requirements.txt  resolvers.py  schema.graphql  thinking_styles.py  universal_dto.py  vsa.py  vsa_utils.py
extension/agi_stack/bridge/: dn_tree.py  frame_integration.py  frame_system.py  hybrid_search.py  louvain.py  orchestrator.py  rdf_lite.py  sigma_bridge.py  sigma_delta.py  sigma_delta_parser.py  sigma_hydration.py  verb_edge_mapping.py  verb_glyph_bridge.py  zero_token_bridge.py
extension/agi_stack/core/: kopfkino.py
extension/agi_stack/data/: ace_crystal_router.json  complete_edge_schema.json  golden_states_complete.json  markov_chain_encoder.json  markov_crystal_data.json  tau_thinking_styles.json  thinking_style_manifold.json  unified_markov_encoder.json
extension/agi_stack/dome/: dream_engine.py
extension/agi_stack/dream/: engine.py
extension/agi_stack/dto/: DTO_GAP_ANALYSIS.md  TECHNICAL_DEBT_AUDIT.md  TECHNICAL_DEBT_CLEANUP.md  TRANSLATION_ARCHITECTURE.md  __init__.py  ada_10k.py  affective.py  alternate_reality_dto.py  base_dto.py  dimension_registry.py  felt.py  felt_dto.py  friston_dto.py  gestalt_model_dto.py  location.py  media_dto.py  moment_dto.py  physics_dto.py  qualia_edges_dto.py  receiver.py  receiver_hook.py  situation_dto.py  soul.py  soul_dto.py  synesthesia_dto.py  thinking_style.py  transcend_dto.py  universal.py  vision_dto.py  volition_dto.py  wire_10k.py  world_dto.py
extension/agi_stack/hive/: __init__.py  code_schema_10k.py  cognition_graph.py  hive_code_chunker.py
extension/agi_stack/integrations/: epistemic_awakening.py
extension/agi_stack/materialwissenschaft/: __init__.py
extension/agi_stack/physics/: __init__.py  causal_qualia_gnn.py  dream_engine.py  markov_unit.py  qualia_graph.py  resonance_fusion.py  sigma_field.py  transition.py
extension/agi_stack/schema/: golden_states_complete.kuzu  markov_crystal.kuzu
extension/agi_stack/stubs/: AGI_WISHLIST_FOR_CLAUDE_CODE.md  LADYBUG_BRAINSTORM.md  __init__.py  adaptive_resonance.py  integrated_agi_primitives.py  modern_hopfield.py  pending_dtos.py  self_modifying.py  vector_10k_stub.py  vsa_analogical.py  vsa_learned_analogical.py
extension/agi_thinking/: AGI_THINKING_ARCHITECTURE.md  CMakeLists.txt  CPP_MIGRATION_ANALYSIS.md  LADYBUG_ARCHITECTURE.md  LADYBUG_INTEGRATION_TODO.md  LADYBUG_LAYERS.md  MICROCODE_CORRECTED.md  README.md  __init__.py  active_inference.py  brain_mesh.py  dreamer_pandas.py  kernel_awakened.py  ladybug_engine.py  langgraph_ada.py  layer_bridge.py  macro_persistence.py  microcode.py  microcode_v2.py  mul_agency.py  progressive_awareness.py  qualia_learner.py  rung_bridge.py  texture.py  the_self.py  thought_kernel.py  triangle_l4.py
extension/agi_thinking/include/: vsa_core.hpp
extension/agi_thinking/src/: bindings.cpp
extension/config/: __init__.py  agent_card_switcher.py  awareness_config.py
extension/dto/: README.md  __init__.py  admin_bridge.py  alternate_reality_bridge.py  embodiment_bridge.py  felt_bridge.py  moment_bridge.py  physics_bridge.py  soul_bridge.py  world_render_bridge.py
extension/graphql_agi/: .dockerignore  CMakeLists.txt  DOCKER.md  Dockerfile  Dockerfile.simple  README.md  docker-compose.yml  railway.json  railway.toml
extension/graphql_agi/docker/: entrypoint.sh
extension/graphql_agi/docker/config/: production.yaml
extension/graphql_agi/include/: graphql_agi_extension.h
extension/graphql_agi/include/agi/: planning_system.h  reasoning_engine.h
extension/graphql_agi/include/graphql/: query_translator.h  schema_registry.h
extension/graphql_agi/include/ladybug/: debugger.h
extension/graphql_agi/include/lancedb/: lancedb_connector.h
extension/graphql_agi/python/: README.md  pyproject.toml
extension/graphql_agi/python/graphql_agi/: __init__.py  server.py
extension/graphql_agi/python/graphql_agi/agi/: __init__.py  planning.py  reasoning.py
extension/graphql_agi/python/graphql_agi/core/: __init__.py  client.py  schema.py
extension/graphql_agi/python/graphql_agi/ladybug/: __init__.py  debugger.py  engine.py
extension/graphql_agi/python/graphql_agi/lancedb/: __init__.py  vector_store.py
extension/graphql_agi/python/tests/: __init__.py  test_graphql_agi.py
extension/graphql_agi/src/: graphql_agi_extension.cpp
extension/graphql_agi/src/graphql/: query_translator.cpp  schema_registry.cpp
scripts/extension/: Dockerfile  railway.toml
